# macluster

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: axis1_link.yaml  axis2_algorithms.yaml  axis3_adaptive.yaml  model_scale.yaml  smoke.yaml
configs/grove/: adaptive.env  dense.env  diloco.env  dp_mid.env  mp_mid.env  pipeline.env  pipeline_3b.env  pipeline_smoke.env  pipeline_xl.env  smoke.env  sparseloco.env
docs/: BORROWED_MAC_RUNBOOK.md  PHASE7_TODO.md  PHASE8_MODELPARALLEL.md  USAGE.md
scripts/: fetch_data.sh  grove_entry.py  grove_ping.py  grove_run.sh  grove_selftest.py  net_check.sh  p2.sh  plot.py  plot_dp_vs_mp.py  run2.sh  run2_coord.sh  run2_join.sh  run_mac_24gb.sh  run_mac_48gb.sh
src/macluster/: __init__.py  cli.py  experiment.py  task.py  train.py
src/macluster/algorithms/: adaptive.py  base.py  compress.py  dense.py  diloco.py  sparseloco.py
src/macluster/backends/: grove_backend.py  pipeline.py  pipeline_grove.py  sim.py
src/macluster/data/: cifar.py  text.py
src/macluster/emulation/: link.py
src/macluster/metrics/: logger.py
src/macluster/models/: gpt.py  resnet.py
tests/: test_adaptive.py  test_algorithms_base.py  test_compress.py  test_dp_vs_mp.py  test_grove_backend.py  test_link.py  test_pipeline.py  test_sim_and_train.py
